--- a/src/components/productCategories.module.css
+++ b/src/components/productCategories.module.css
@@ -6,14 +6,17 @@
 }
 
 .product{
+	flex-grow: 1;
 	margin-top: 40px;
+	margin-left: 20px;
+	margin-right: 20px;
 	justify-content: center;
 	align-items: center;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	width: 400px;
-	height: 200px;
+	width: 600px;
+	height: 350px;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.11);
 	border-radius: 20px;
 }
@@ -22,7 +25,7 @@
 }
 
 .productImageContainer{
-	width: 100px;
+	width: 300px;
 }
 
 .productImage{
@@ -30,6 +33,7 @@
 }
 
 .productName{
-	font-size: 20px;
-	margin-top: 20px;
+	font-size: 25px;
+	margin-top: 26px;
 }
+
