--- a/src/home.module.css
+++ b/src/home.module.css
@@ -2,16 +2,18 @@
 	width: 72vw;
 	flex-grow: 1;
 }
+
 .MainContainer {
 	max-width: 1200px;
 	position: relative;
 	margin: auto;
-	height: 100%;
+	height: 85%;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 	/* margin-top: 140px; */
 }
+
 .slideshowContainer {
 	position: relative;
 	width: 40vw;
@@ -47,6 +49,7 @@
 	user-select: none;
 	z-index: 10;
 }
+
 /* Position the "next button" to the right */
 .next {
 	right: 0;
@@ -61,7 +64,7 @@
 
 /* Caption text */
 .text {
-	margin-top: 80px;
+	margin-top: 50px;
 	color: #f2f2f2;
 	font-size: 30px;
 	padding: 8px 12px;
@@ -81,7 +84,7 @@
 	top: 0;
 }
 
-.mySlides{
+.mySlides {
 	margin-left: auto;
 	margin-right: auto;
 	width: 400px;
@@ -90,33 +93,41 @@
 .mySlides img {
 	border-radius: 10px;
 }
+
 @media only screen and (max-width: 768px) {
-LoginPage {
+	LoginPage {
 		flex-direction: column;
 	}
+
 	.MainContainer {
 		justify-content: center;
 	}
+
 	.slideshowContainer {
 		width: 50%;
 	}
+
 	.screenshotPane {
 		height: 92vh;
 		width: 100%;
 		flex-grow: 1;
 	}
+
 	.text {
 		font-size: 30px;
 	}
+
 	.MainContainer {
 		height: 100%;
 		/* margin-top: 140px; */
 	}
+
 	.prev,
 	.next {
 		margin-top: 100vh;
 	}
 }
+
 .LoginPane {
 	width: 100%;
 	margin: 0;
@@ -127,6 +138,7 @@ LoginPage {
 	padding-right: 2vw;
 	padding-top: 2vh;
 }
+
 .LogoBanner {
 	overflow: hidden;
 	justify-content: center;
@@ -136,6 +148,7 @@ LoginPage {
 	padding-bottom: 5vh;
 	height: 38vh;
 }
+
 .LogoContainer {
 	display: flex;
 	flex-direction: column;
@@ -143,10 +156,12 @@ LoginPage {
 	margin: auto;
 	height: 20vh;
 }
+
 .Logo {
 	max-width: 100%;
 	max-height: 100%;
 }
+
 .LogoName {
 	margin-left: 1vw;
 	margin-right: 1.5vw;
@@ -155,58 +170,68 @@ LoginPage {
 	font-size: 34px;
 	font-family: "Architects Daughter", cursive;
 }
+
 .Itemlist {
+	margin-left: 30px;
 	display: flex;
 	font-size: 25px;
 	margin-top: 8vh;
 }
+
 .Underbar {
 	position: absolute;
 	margin-top: 40px;
 	width: 60px;
 	height: 1px;
-	background: black;
+	background: #05ABE8;
 	-webkit-transition: 0.5s ease;
 	transition: 0.5s ease;
 }
-.active ~ .Underbar {
+
+.active~.Underbar {
 	/* a:nth-of-type(1):hover ~ .Underbar { */
 	margin-left: 0px;
 	width: 60px;
 }
 
-.activeMargin ~ .Underbar {
+.activeMargin~.Underbar {
 	/* a:nth-of-type(2):hover ~ .Underbar { */
 	margin-left: 110px;
 	width: 85px;
 }
+
 .LoginLink {
-	color: black;
+	color: #05ABE8;
 	opacity: 0.3;
 	padding: 0;
 	cursor: default;
 	-webkit-transition: 0.5s ease;
 	transition: 0.5s ease;
 }
+
 .LoginLink:hover,
 .LoginLink:active,
 .active,
 .active:hover {
 	opacity: 1;
-	color: black;
+	color: #05ABE8;
+	font-weight: bolder;
 	cursor: default;
 	-webkit-transition: 0.5s ease;
 	transition: 0.5s ease;
 }
+
 .activeMargin,
 .activeMargin:hover {
 	opacity: 1;
 	margin-left: 50px;
-	color: black;
+	color: #05ABE8;
+	font-weight: bolder;
 	cursor: default;
 	-webkit-transition: 0.5s ease;
 	transition: 0.5s ease;
 }
+
 .SignLink {
 	margin-left: 50px;
 	opacity: 0.3;
@@ -216,6 +241,7 @@ LoginPage {
 	-webkit-transition: 0.5s ease;
 	transition: 0.5s ease;
 }
+
 .SignLink:hover {
 	opacity: 1;
 	color: black;
@@ -223,20 +249,7 @@ LoginPage {
 	-webkit-transition: 0.5s ease;
 	transition: 0.5s ease;
 }
-.DSCLogoContainer {
-	position: absolute;
-	width: inherit;
-	display: flex;
-	justify-content: center;
-	min-width: 280px;
-	bottom: 10px;
-}
-.DSCLogo {
-	margin: auto auto;
-	max-width: 320px;
-	padding-right: 30px;
-	padding-bottom: 20px;
-}
+
 .message {
 	color: #ff7d4b;
 	text-align: center;
@@ -244,22 +257,10 @@ LoginPage {
 	margin-top: 15px;
 	/* display: none; */
 }
+
 @media screen and (max-width: 600px) {
 	.LoginPane {
 		height: auto;
-	}
-	.DSCLogoContainer {
-		position: relative;
-	}
-	.DSCLogo {
-		margin-top: 20px;
-	}
-	.DSCLogoContainer {
-		position: relative;
-		margin-top: 50px;
-	}
-	.DSCLogo {
-		margin-top: 20px;
 	}
 }
 
@@ -270,6 +271,7 @@ LoginPage {
 		padding-left: 1vw;
 		padding-top: 2vh;
 	}
+
 	.LogoBanner {
 		flex-direction: row;
 		padding-left: 1vw;
@@ -277,6 +279,7 @@ LoginPage {
 		margin-top: 4vh;
 		height: 17vh;
 	}
+
 	.LogoContainer {
 		display: flex;
 		flex-direction: column;
@@ -284,10 +287,12 @@ LoginPage {
 		margin: auto;
 		height: 17vh;
 	}
+
 	.Logo {
 		max-width: 100%;
 		max-height: 100%;
 	}
+
 	.LogoName {
 		margin-left: 1vw;
 		margin-right: 1.5vw;
@@ -302,17 +307,21 @@ LoginPage {
 			width: auto;
 			height: 100vh;
 		}
+
 		.LogoBanner {
 			margin-top: 20px;
 			height: 25vh;
 			flex-direction: column;
 		}
+
 		.LogoContainer {
 			height: 15vh;
 		}
+
 		.LogoName {
 			font-size: 40px;
 		}
+
 		.Itemlist {
 			margin-top: 30px;
 		}
